--- a/apps/html_embedded/index.html
+++ b/apps/html_embedded/index.html
@@ -2,41 +2,69 @@
 <html>
 	<head>
 		<title>RazorFlow Embedded Example</title>
-		<link rel="stylesheet" href="razorflow_js/css/razorflow.min.css"/>
-		<script src="razorflow_js/js/jquery.min.js" type="text/javascript"></script>
-		<script src="razorflow_js/js/razorflow.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="html_embedded/razorflow_js/css/razorflow.min.css"/>
+		<script src="html_embedded/razorflow_js/js/jquery.min.js" type="text/javascript"></script>
+		<script src="html_embedded/razorflow_js/js/razorflow.min.js" type="text/javascript"></script>
 		<style>
-			#dashboard_target {
-				width: 800px;
-			}
+		    body {
+		        font-family: Arial;
+		    }
+		    .container {
+		        width: 100%;
+		        height: 100%;
+		    }
 		</style>
 	</head>
 	<body>
-		<h1>Embedded Dashboard</h1>
-		<div id="dashboard_target"></div>
-		<script type="text/javascript">
-			var db = new EmbeddedDashboard ();
+	<div class="container">
+	    <h1>Sales Dashboard</h1>
+	    <div id="dashboard-container">
 
-			var chart = new ChartComponent();
-			chart.setDimensions (6, 6);
-			chart.setCaption("First Chart");	
-			chart.setLabels (["Jan", "Feb", "Mar"]);
-			chart.addSeries ("beverages", "Beverages", [1355, 1916, 1150]);
-			chart.addSeries ("packaged_foods", "Packaged Foods", [1513, 976, 1321]);
-			db.addComponent (chart);
+	    </div>
+	    <button class="action"></button>
+	</div>
 
-			var chart2 = new ChartComponent();
-			chart2.setDimensions (6, 6);
-			chart2.setCaption("Second Chart");	
-			chart2.setLabels (["A", "B", "C"]);
-			chart2.addSeries("series_1", "Series 1", [1, 2, 3]);
-			db.addComponent (chart2);
+	<script type="text/javascript">
+  
+        var db = new Dashboard();
 
-			chart.onItemClick (function (params) {
-				chart2.updateSeries ("series_1", [3, 5, 2]);
-			});
+        var kpi1 = new KPIComponent();
+        kpi1.setDimensions(3, 2);
+        kpi1.setCaption('Total Sales');
+        kpi1.setValue(687, {
+            numberPrefix: '$'
+        });
 
-			db.embedTo("dashboard_target");
-		</script>
+        var chart1 = new ChartComponent();
+        chart1.setDimensions(4, 4);
+        chart1.setCaption('Sales by category');
+        chart1.setLabels(['Beverages', 'Condiments', 'Dairy Products']);
+        chart1.addSeries('sales', 'Sales', [232, 134, 321]);
+
+        var table1 = new TableComponent();
+        table1.setDimensions(4, 4);
+        table1.setCaption('Sales by year');
+        table1.addColumn('year', 'Year');
+        table1.addColumn('sales', 'Sales');
+        table1.addRow({
+            'year': 2011,
+            'sales': 432
+        });
+        table1.addRow({
+            'year': 2012,
+            'sales': 561
+        });
+        table1.addRow({
+            'year': 2013,
+            'sales': 687
+        });
+
+        db.addComponent(kpi1);
+        db.addComponent(chart1);
+        db.addComponent(table1);
+
+        db.embedTo('dashboard-container');
+    
+	</script>
 	</body>
 </html>
