--- a/apps/html_embedded/index.html
+++ b/apps/html_embedded/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>RazorFlow Embedded Example</title>
-		<link rel="stylesheet" href="html_embedded/razorflow_js/css/razorflow.min.css"/>
-		<script src="html_embedded/razorflow_js/js/jquery.min.js" type="text/javascript"></script>
-		<script src="html_embedded/razorflow_js/js/razorflow.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="razorflow_js/css/razorflow.min.css"/>
+		<script src="razorflow_js/js/jquery.min.js" type="text/javascript"></script>
+		<script src="razorflow_js/js/razorflow.min.js" type="text/javascript"></script>
 		<style>
 		    body {
 		        font-family: Arial;
