improve the quickstarts

--- a/jsrf/quickstart/index.html
+++ b/jsrf/quickstart/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="js/dashboard_app.js"></script>
     </head>  
     <body>
+        <!-- Don't delete this div. This is where RazorFlow will get rendered. -->
         <div id="dbTarget" style="position:relative;" class="rf"></div>
     </body>
 </html>
