Initial code for leanardo to render a svg element

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -10,10 +10,11 @@
 		require(["razorcharts2/core/rcmain"], function (Chart) {
             var chart = new Chart();
             chart.config({type: 'linear'});
+            chart.renderTo(document.getElementById ('container'), 100, 100);
 		});
 	</script>
 </head>
 <body>
-
+    <div id="container"></div>
 </body>
 </html>
