--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -5,6 +5,12 @@
 	<script type="text/javascript" src="/mount/jsrf/vendor/require.min.js"></script>
 	<script type="text/javascript" src="/mount/jsrf/js/requireConfig.js"></script>
 	<title>RazorCharts Testbed</title>
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 	<script type="text/javascript">
 		require.config(window.browserConfig);
 		require(["razorcharts2/core/rcmain"], function (Chart) {
@@ -20,7 +26,7 @@
                     }
                 ]
             });
-            chart.renderTo(document.getElementById ('container'), 100, 100);
+            chart.renderTo(document.getElementById ('container'), 400, 300);
 		});
 	</script>
 </head>
