milestone : got a column chart working

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -10,6 +10,10 @@
             margin: 0;
             padding: 0;
         }
+
+        #container {
+            margin: 300px;
+        }
     </style>
 	<script type="text/javascript">
 		require.config(window.browserConfig);
