Made the column chart update

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -26,19 +26,257 @@
                     {
                         seriesIndex: 0,
                         displayType: 'column',
-                        data: [10, 15, 5, 18, 20]
+                        data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
                     }
                 ]
             });
-            chart.renderTo(document.getElementById ('container'), 300, 200);
+            chart.renderTo(document.getElementById ('container'), 600, 400);
 
-            document.getElementsByTagName('body')[0].addEventListener('click', function() {
-                chart.resizeTo (600, 400);
-            });
+            // var chart2 = new Chart();
+            // chart2.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart2.renderTo(document.getElementById ('container2'), 600, 400);
+
+
+            // var chart3 = new Chart();
+            // chart3.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart3.renderTo(document.getElementById ('container3'), 600, 400);
+
+            // var chart4 = new Chart();
+            // chart4.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart4.renderTo(document.getElementById ('container4'), 600, 400);
+
+
+            // var chart5 = new Chart();
+            // chart5.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart5.renderTo(document.getElementById ('container5'), 600, 400);
+
+            // var chart6 = new Chart();
+            // chart6.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart6.renderTo(document.getElementById ('container6'), 600, 400);
+
+            // var chart7 = new Chart();
+            // chart7.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart7.renderTo(document.getElementById ('container7'), 600, 400);
+
+            // var chart8 = new Chart();
+            // chart8.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart8.renderTo(document.getElementById ('container8'), 600, 400);
+
+            // var chart9 = new Chart();
+            // chart9.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+
+            // chart9.renderTo(document.getElementById ('container9'), 600, 400);
+
+            // var chart10 = new Chart();
+
+            // chart10.config({
+            //     type: 'linear',
+            //     labels: ['abc', 'def', 'hij', 'klm', 'nop'],
+            //     series: [
+            //         {
+            //             seriesIndex: 0,
+            //             displayType: 'column',
+            //             data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+            //         }
+            //     ]
+            // });
+            // chart10.renderTo(document.getElementById ('container10'), 600, 400);
+
+            setInterval(function() {
+                var arr = [];
+                for(var i=0; i<30; i++) {
+                    arr[i] = Math.floor(Math.random() * 30);
+                }
+                chart.update ({
+                    series: [
+                        {
+                            seriesIndex: 0,
+                            data: arr
+                        }
+                    ]
+                });
+                // chart2.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+
+                // chart3.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+
+                //  chart4.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+                // chart5.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+
+                //  chart6.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+                //   chart7.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+                //    chart8.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+                //     chart9.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+                //      chart10.update ({
+                //     series: [
+                //         {
+                //             seriesIndex: 0,
+                //             data: arr
+                //         }
+                //     ]
+                // });
+            }, 1000);
+
+            // document.getElementsByTagName('body')[0].addEventListener('click', function() {
+            //     // chart.resizeTo (600, 400);
+            //     chart.update ({
+            //         series: [
+            //             {
+            //                 seriesIndex: 0,
+            //                 data: [25, 14, 8, 10, 12]
+            //             }
+            //         ]
+            //     });
+            // });
 		});
 	</script>
 </head>
 <body>
     <div id="container"></div>
+    <div id="container2"></div>
+    <div id="container3"></div>
+    <div id="container4"></div>
+    <div id="container5"></div>
+    <div id="container6"></div>
+    <div id="container7"></div>
+    <div id="container8"></div>
+    <div id="container9"></div>
+    <div id="container10"></div>
+
 </body>
 </html>
