Axes animations and transforms and stuff

--- a/examples/devtest/razorcharts/old_razorcharts.html
+++ b/examples/devtest/razorcharts/old_razorcharts.html
@@ -127,9 +127,9 @@
             // chart4.renderTo(document.getElementById ('container4'), 600, 400);
 
 
-            setInterval(function() {
+            setTimeout(function() {
                 var arr = [];
-                for(var i=0; i<30; i++) {
+                for(var i=0; i<100; i++) {
                     arr[i] = Math.floor(Math.random() * 30);
                 }
                 chart.updateSeries ([
