--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -26,7 +26,7 @@
                     {
                         seriesIndex: 0,
                         displayType: 'column',
-                        data: [10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20]
+                        data: [10, 15, 5, 18, 40, 10, 15, 5, 18, 20, 10, 15, 5, 18, 20, 10, 15, 5, 18, 40, 10, 15, 5, 18, 20, 10, 15, 5, 18, 40]
                     }
                 ]
             });
@@ -162,10 +162,10 @@
             // });
             // chart10.renderTo(document.getElementById ('container10'), 600, 400);
 
-            setInterval(function() {
+            setTimeout(function() {
                 var arr = [];
                 for(var i=0; i<30; i++) {
-                    arr[i] = Math.floor(Math.random() * 30);
+                    arr[i] = Math.floor(Math.random() * 25);
                 }
                 chart.update ({
                     series: [
