--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -23,22 +23,23 @@
                 type: 'linear',
                 labels: ['abc', 'def', 'hij', 'klm', 'nop'],
                 dualAxis: true,
+                // stacked: true
                 series: [
                     {
                         seriesIndex: 0,
                         displayType: 'column',
-                        data: [10, 15, 5, 18, 40],
+                        data: [10, 15, -5, 18, 40],
                     },
                     {
                         seriesIndex: 1,
                         displayType: 'column',
-                        data: [23, 5, 15, 8, 32],
+                        data: [23, 5, -15, 8, 32],
                         yAxis: 'right'
                     },
                     {
                         seriesIndex: 2,
                         displayType: 'column',
-                        data: [2, 5, 5, 8, 2]
+                        data: [2, 5, -5, 8, 2]
                     },
                 ]
             });
@@ -270,6 +271,7 @@
                 for(var i=0; i<5; i++) {
                     arr[i] = Math.floor(Math.random() * 100);
                 }
+                arr[3] = -Math.floor(Math.random() * 100);
                 chart.update ({
                     series: [
                         {
