Path interpolation with animation and made line chart work

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -23,7 +23,7 @@
                 type: 'linear',
                 labels: ['abc', 'def', 'hij', 'klm', 'nop'],
                 // dualAxis: true,
-                stacked: true,
+                // stacked: true,
                 series: [
                     {
                         seriesIndex: 0,
@@ -33,7 +33,7 @@
                     },
                     {
                         seriesIndex: 1,
-                        displayType: 'column',
+                        displayType: 'line',
                         data: [23, 5, -15, 8, 32],
                         yAxis: 'right',
                         color: 'green'
