Fixed a bug regarding the yAxis height in linear chart caused by mutation on the xAxis on resize

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -21,7 +21,7 @@
             var chart = new Chart();
             chart.config({
                 type: 'linear',
-                labels: ['This is a fucking long label', 'This label should be longer the previous label', 'hijdef def def', 'klm', 'nop'],
+                labels: ['This is a fucking long label', 'This label should be longer than the previous label', 'hijdef def def', 'klm', 'nop'],
                 // dualAxis: true,
                 stacked: true,
                 series: [
