added a helper function to get the optimized pie size on first render

--- a/examples/devtest/razorcharts/index.html
+++ b/examples/devtest/razorcharts/index.html
@@ -24,7 +24,7 @@
                 // min: 0,
                 // max: 100,
                 // value: 40
-                labels: ['abcdsabhkfdjsbfkjsdg', 'def', 'hij', 'klm', 'nop'],
+                labels: ['abcfsdfsdfsdfsdfsdfsdf', 'deffsdfsdfsfdsdfs', 'hij', 'klmsfsdfsdfsfsf', 'nop'],
                 // dualAxis: true,
                 // stacked: true,
                 // series: [
